<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:elevation="@dimen/cardview_default_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="14dp"
    >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/gray"
                >
                <ImageView
                    android:id="@+id/imgNFT"
                    android:src="@drawable/img_collection_02"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/nft_img_desc" />

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtName"
                    android:text="@string/name_test"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginBottom="14dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txtAuthor"
                            android:text="@string/author_test"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:layout_marginTop="14dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UseCompoundDrawables">
                            <ImageView
                                android:src="@drawable/eth_icon"
                                android:layout_width="20dp"
                                android:layout_height="24dp"
                                android:contentDescription="@string/eth_icon" />
                            <TextView
                                android:id="@+id/txtPrice"
                                android:text="@string/price_test"
                                android:textColor="@color/primary"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:background="@drawable/btn_custom"
                        android:id="@+id/btnDetail"
                        android:textColor="@color/white"
                        android:layout_gravity="bottom"
                        android:text="@string/detail_btn"
                        android:textAllCaps="false"
                        android:layout_width="120dp"
                        android:layout_height="40dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>